[#core] refactor Transaction state logic, implement state pattern for more expressiveness